--- a/ui/webuitemplate/test.html
+++ b/ui/webuitemplate/test.html
@@ -1,4 +1,3 @@
-<!--
 <html lang="en">
 <head>
 <title>GoCuNets Output</title>
@@ -70,50 +69,15 @@ body {
 	}
 }
 </style>
-<script>
-
-</script>
 <body>
 
+<h2>Iframe - Target for a Link</h2>
 
-<div class="header">
-  <h1>On Demand Layout</h1>
-  <p>Too Much Stuff</p>
-</div>
+<iframe height="600px" width="100%" src="http://localhost:8080/romanout/" name="iframe_a" style="border:none;"></iframe>
 
-<div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-</div>
+<p><a href="http://localhost:8080/romanout/" target="iframe_a">W3Schools.com</a></p>
 
-{{range .}}
-{{ .NewRow}}
-  <div class="column">
-  	<h2>{{.Header}}</h2>
-		<img id="{{.Id}}" src="{{.Url}}">
-		<p>{{.Paragraph}}</p>
-		<script>
-			{{ }}
-			var {{.MyVar}} = setInterval({{.Func}},{{.Rate}})
-		function {{.Func}}(){
-			var d = new Date();
-			var theurl = "{{.Url}}"+d.toLocaleTimeString();
-			 document.getElementById("{{.Id}}").src= theurl;
-			// document.getElementById("{{.Id}}").innerHTML= theurl;
-		}
-        </script>
-</div>
-{{ .EndRow}}
-{{end}}
+<p>When the target of a link matches the name of an iframe, the link will open in the iframe.</p>
 
-
-	
-	
 </body>
 </html>
-
--->
